@@ -7,7 +7,6 @@ Makefile
 Makefile.in
 autom4te.cache/*
 missing
-*.o
 configure
 config.h
 config.log
@@ -15,12 +14,20 @@ config.status
 stamp-h1
 .deps
 
+# Cpp generated files
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.lo
+
 # release-all logs
 log-release-all-network.log
 
 # services/ related
 
-# network related
+# network/ related
 network/rainbrurpg-network.pc
 network/src/benchmark/benchmark   # The generated executable
 network/src/benchmark/ASNPerson.C # generated by snacc
@@ -28,3 +35,12 @@ network/src/benchmark/ASNPerson.h # generated by snacc
 network/src/benchmark/archive.bin # Created by Boost.Serialization
 network/src/proto/RainbruRPG.C    # generated by snacc
 network/src/proto/RainbruRPG.h    # generated by snacc
+
+# logger/ related
+logger/rainbrurpg-logger.lsm
+logger/rainbrurpg-logger.pc
+logger/rainbrurpg-logger.spec
+logger/src/.libs/*
+logger/src/examples/.libs/*
+logger/src/examples/logger-test
+logger/src/tools/MainWindow_ui.rb  # Generated by rbuic
