@@ -112,9 +112,6 @@
              <attribute name="horizontalHeaderVisible">
               <bool>false</bool>
              </attribute>
-             <attribute name="horizontalHeaderVisible">
-              <bool>false</bool>
-             </attribute>
              <row>
               <property name="text">
                <string>Logfile version</string>
@@ -184,8 +181,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>104</width>
-            <height>104</height>
+            <width>274</width>
+            <height>332</height>
            </rect>
           </property>
           <attribute name="label">
@@ -200,9 +197,6 @@
              <property name="columnCount">
               <number>1</number>
              </property>
-             <attribute name="horizontalHeaderVisible">
-              <bool>false</bool>
-             </attribute>
              <attribute name="horizontalHeaderVisible">
               <bool>false</bool>
              </attribute>
@@ -299,12 +293,12 @@
           <string>&amp;Source file</string>
          </property>
          <property name="buddy">
-          <cstring>comboBox_2</cstring>
+          <cstring>cbSourcesFiles</cstring>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBox_2">
+        <widget class="QComboBox" name="cbSourcesFiles">
          <item>
           <property name="text">
            <string>To be populated programmatically</string>
